agentgateway/enterprise-mcp/manifests/kubernetes/10-mcp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: enterprise-mcp-gateway
  namespace: agentgateway-system
  labels:
    app.kubernetes.io/name: enterprise-mcp-gateway
    example.io/environment: sandbox
    example.io/system: enterprise-mcp-mcp
spec:
  gatewayClassName: enterprise-agentgateway
  listeners:
  - name: mcp-http
    protocol: HTTP
    port: 3000
    allowedRoutes:
      namespaces:
        from: Same
  - name: llm-http
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: Same
