agentgateway/enterprise-mcp/manifests/kubernetes/20-mcp-backends-and-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-core-banking-mcp
  namespace: agentgateway-system
  labels:
    example.io/use-case: account-servicing
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: enterprise-mcp-gateway
    sectionName: mcp-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp/core-banking
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: internal-core-banking-mcp
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-core-banking-mcp-rate-limit
  namespace: agentgateway-system
  labels:
    example.io/use-case: account-servicing-rate-limit-test
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: enterprise-mcp-gateway
    sectionName: mcp-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp/core-banking-rate-limit
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: internal-core-banking-mcp
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vendor-case-management-mcp
  namespace: agentgateway-system
  labels:
    example.io/use-case: case-management
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: enterprise-mcp-gateway
    sectionName: mcp-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp/case-management
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: vendor-case-management-mcp
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: approved-llm
  namespace: agentgateway-system
  labels:
    example.io/use-case: shared-llm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: enterprise-mcp-gateway
    sectionName: llm-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: approved-llm
